--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+APP_START_YEAR=2016
+APP_START_DATE=2016-01-01
+
 DB_CONNECTION=pgsql
 DB_HOST=postgres
 DB_PORT=5432
