--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
+APP_LOCALE="el_GR.utf8"
 APP_URL=http://localhost
 
 APP_START_YEAR=2016
