--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "^5.3",
         "barryvdh/laravel-debugbar": "~2.4",
         "doctrine/dbal": "^2.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "itsgoingd/clockwork": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
