--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '2'
 
 volumes:
-  crm-postgres-data:
+  postgres-data:
     driver: local
-  crm-redis-data:
+  redis-data:
     driver: local
 
 services:
@@ -11,11 +11,9 @@ services:
     image: postgres:10.3
     container_name: crm-postgres
     volumes:
-      - crm-postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    networks:
-      - crm-network
     environment:
       - POSTGRES_PASSWORD=laravel
       - POSTGRES_DB=laravel
@@ -26,11 +24,9 @@ services:
     container_name: crm-redis
     command: --appendonly yes
     volumes:
-      - crm-redis-data:/data
+      - redis-data:/data
     ports:
       - "6379:6379"
-    networks:
-      - crm-network
 
   nginx:
     image: nginx:latest
@@ -40,8 +36,6 @@ services:
       - ./docker/nginx:/etc/nginx/conf.d
     ports:
       - "8002:80"
-    networks:
-      - crm-network
 
   php-fpm:
     build: docker/php-fpm
@@ -50,9 +44,3 @@ services:
     volumes:
       - .:/var/www
       - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
-    networks:
-      - crm-network
-
-networks:
-  crm-network:
-    driver: bridge
