--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,46 @@
-version: '2'
+version: "3"
 
 volumes:
-  postgres-data:
-    driver: local
-  redis-data:
-    driver: local
+    postgres-data:
+        driver: local
+    redis-data:
+        driver: local
 
 services:
-  crm_postgres:
-    image: postgres:10.3
-    container_name: crm_postgres
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    ports:
-      - 26200:5432
-    environment:
-      - POSTGRES_PASSWORD=laravel
-      - POSTGRES_DB=laravel
-      - POSTGRES_USER=laravel
+    crm_postgres:
+        image: postgres:12
+        container_name: crm_postgres
+        volumes:
+            - postgres-data:/var/lib/postgresql/data
+        ports:
+            - 26200:5432
+        environment:
+            - POSTGRES_PASSWORD=laravel
+            - POSTGRES_DB=laravel
+            - POSTGRES_USER=laravel
 
-  crm_redis:
-    image: redis:4.0
-    container_name: crm_redis
-    command: --appendonly yes
-    volumes:
-      - redis-data:/data
-    ports:
-      - 6379:6379
+    crm_redis:
+        image: redis:4.0
+        container_name: crm_redis
+        command: --appendonly yes
+        volumes:
+            - redis-data:/data
+        ports:
+            - 26379:6379
 
-  crm_nginx:
-    image: nginx:latest
-    container_name: crm_nginx
-    volumes:
-      - .:/var/www
-      - ./docker/nginx:/etc/nginx/conf.d
-    ports:
-      - 8002:80
+    crm_nginx:
+        image: nginx:latest
+        container_name: crm_nginx
+        volumes:
+            - .:/var/www
+            - ./docker/nginx:/etc/nginx/conf.d
+        ports:
+            - 8002:80
 
-  crm_php:
-    build: docker/php-fpm
-    container_name: crm_php
-    working_dir: /var/www
-    volumes:
-      - .:/var/www
-      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
+    crm_php:
+        build: docker/php-fpm
+        container_name: crm_php
+        working_dir: /var/www
+        volumes:
+            - .:/var/www
+            - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
