--- a/public/manifestv3.json
+++ b/public/manifestv3.json
@@ -48,5 +48,5 @@
     "display": "standalone",
     "background_color": "#32c787",
     "description": "CRM",
-    "orientation": "portrait-primary"
+    "orientation": "any"
 }
